src/objects/Failed_Loan_Account__c.object
<CustomObject>
    <fields>
        <fullName>Failure_Reason_Code__c</fullName>
        <label>Failure Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Reason__c</fullName>
        <label>Failure Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Account</label>
        <referenceTo>Loan_Account__c</referenceTo>
        <relationshipLabel>Failed Loan Account</relationshipLabel>
        <relationshipName>Failed_Loan_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processing_Event__c</fullName>
        <label>Processing Event</label>
        <picklist>
            <picklistValues>
                <fullName>SOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accrual Cron Job</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Failed Loan Account</label>
    <nameField>
        <label>Failed Loan Accounts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Failed Loan Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>